--- a/Module_2/AcsessModifile/AcsessModifileDemo/AcsessModifileDemo.csproj
+++ b/Module_2/AcsessModifile/AcsessModifileDemo/AcsessModifileDemo.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject>AcsessModifileDemo.Program</StartupObject>
   </PropertyGroup>
 
 </Project>
