--- a/Module_2/Threads/ThreadDemo/ThreadDemo.csproj
+++ b/Module_2/Threads/ThreadDemo/ThreadDemo.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="TestThread.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="TestThread.cs" />
+  </ItemGroup>
+
 </Project>
